src/styles/Home.module.scss
.container {
  background-color: #f9f9f9;
  border-radius: 8px;
  position: relative;
  top: 100px;
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
}

.headerLayer {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 10px;
  position: fixed;
  width: 100%;
  background: rgb(252, 252, 252);
  height: 100px;
  top: 0;
  left: 0;
  z-index: 1000;
  box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
  .iconLayer {
    display: flex;
    align-items: center;
    gap: 10px;
  }
  .imglabel {
    font-size: 18px;
    font-weight: 600;
  }
  img {
    width: 40px;
    height: 40px;
  }
  .searchfield {
    display: flex;
    max-width: 78%;
    gap: 20px;
    flex:auto;
    padding-left: 20px;
  }
}

.title {
  font-size: 2rem;
  font-weight: bold;
  text-align: center;
  margin-bottom: 2rem;
}

.filters {
  margin-bottom: 2rem;
  position: fixed;
  height: 80px;
  top: 0;
  margin: auto;
  background-color: #666;
  width: 100%;
  padding: 10px;
  z-index: 1000;
}
.filterGrid {
  display: flex;
}

.searchInput {
  background-color: #fff;
  border-radius: 4px;
}

.gridContainer {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr)); 
  grid-gap: 12px; 
}

.loading {
  text-align: center;
  font-size: 1.2rem;
  color: #666;
}

.booksGrid {
  margin-top: 1rem;
}
.spinnerContainer {
  position: relative;
  width: 100%;
 padding: 12rem;
}

.spinner {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 60px;
  height: 60px;
  border: 6px solid #e0e0e0;
  border-top: 6px solid skyblue;
  border-radius: 50%;
  animation: spin 2s linear infinite;
  transform: translate(-50%, -50%);
  
}

@keyframes spin {
  0% {
      transform: rotate(0deg) translate(0%, 0%);
  }
  100% {
      transform: rotate(360deg) translate(0%, 0%);
  }
}
.noBooks {
  text-align: center;
  font-size: 1.5rem;
  text-align: center;
  padding: 12rem;
  display: flex;
  justify-content: center;
}

.paginationWrapper {
  margin-top: 2rem;
  display: flex;
  justify-content: center;
  padding-bottom: 40px;
}

